Reglas CSS - II
Updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <!-- Etiqueta Section 1/5 -->
         <section id="resumen">
-            <h2>Resumen</h2>
+            <h2 class="subtitle">Resumen</h2>
             <p> Estudiante de Computación con experiencia en desarrollo de software y automatización de procesos. Poseo
                 habilidades en programación con Java y Python, desarrollo web y manejo de bases de datos. He trabajado
                 en proyectos que incluyen la optimización de inventarios y la creación de herramientas de conversión de
@@ -43,7 +43,7 @@
 
         <!-- Etiqueta Section 2/5 -->
         <section id="experiencia">
-            <h2>Experiencia Profesional</h2>
+            <h2 class="subtitle">Experiencia Profesional</h2>
             <ul>
                 <li>
                     <strong>Constructora Scheel</strong> - Asistente de equipo de topografía (Febrero 2023 - Mayo 2023)
@@ -66,7 +66,7 @@
 
         <!-- Etiqueta Section 3/5 -->
         <section id="educacion">
-            <h2>Educación</h2>
+            <h2 class="subtitle">Educación</h2>
             <ul>
                 <li><strong>Academica Naval Almirante Illingworth</strong> - Bachiller (2016-2022)</li>
                 <li><strong>Escuela Superior Politécnica del Litoral (ESPOL)</strong> - Estudiante (2022-Actualidad)
@@ -76,7 +76,7 @@
 
         <!-- Etiqueta Section 4/5 -->
         <section id="proyectos">
-            <h2>Proyectos</h2>
+            <h2 class="subtitle">Proyectos</h2>
             <ul>
                 <li>
                     <strong>Sistema de Gestión de Inventario</strong> - Desarrollo de una aplicación para la
@@ -104,7 +104,7 @@
 
         <!-- Etiqueta Section 5/5 -->
         <section id="habilidades">
-            <h2>Habilidades</h2>
+            <h2 class="subtitle">Habilidades</h2>
             <ul>
                 <li>Programación en Java, Python y JavaScript</li>
                 <li>Desarrollo web con HTML, CSS y frameworks como React</li>
@@ -119,14 +119,14 @@
         </section>
 
         <section id="certificaciones">
-            <h2>Certificaciones</h2>
+            <h2 class="subtitle">Certificaciones</h2>
             <ul>
                 <li>Certificacion en Cisco CyberSecurity - 2022</li>
             </ul>
         </section>
 
         <section id="idiomas">
-            <h2>Idiomas</h2>
+            <h2 class="subtitle">Idiomas</h2>
             <ul>
                 <li>Español - Nativo</li>
                 <li>Inglés - Avanzado</li>
@@ -138,7 +138,7 @@
 
             <!-- Imagen -->
             <section id="imagen_de_ejemplo">
-                <img src="https://placehold.co/400x200/black/white" alt="Imagen de Placeholder"
+                <img id="photo" src="https://placehold.co/400x200/black/white" alt="Imagen de Placeholder"
                     style="display: block; margin: 20px auto; border: 1px solid #ccc; padding: 10px;">
             </section>
 
@@ -161,7 +161,7 @@
 
         <!-- Sección Formulario de Contacto -->
         <section id="formulario_de_contacto">
-            <h2>Contacto</h2>
+            <h2 class="subtitle">Contacto</h2>
             <div
                 style="border: 1px solid #ddd; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 20px auto;">
                 <form style="display: flex; flex-direction: column; gap: 10px;">
