--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     style="display: block; margin: 20px auto; border: 1px solid #ccc; padding: 10px;">
             </section>
 
-            <!-- Video -->s
+            <!-- Video -->
             <section id="video_de_ejemplo">
                 <iframe src="https://www.youtube.com/embed/UB1O30fR-EE" width="560" height="315"
                     style="display: block; margin: 20px auto; border: 1px solid #ccc;" title="Video de YouTube"
@@ -162,9 +162,8 @@
         <!-- Sección Formulario de Contacto -->
         <section id="formulario_de_contacto">
             <h2 class="subtitle">Contacto</h2>
-            <div
-                style="border: 1px solid #ddd; padding: 20px; border-radius: 10px; box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 20px auto;">
-                <form style="display: flex; flex-direction: column; gap: 10px;">
+            <div id="formulario">
+                <form>
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required
                         style="padding: 8px; border: 1px solid #ccc; border-radius: 5px;">
