--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 datos, así como en el ámbito de la topografía. Busco aplicar mis conocimientos en entornos que requieran
                 soluciones innovadoras y eficientes. Capacidad de adaptación, trabajo en equipo y pensamiento crítico
                 son mis principales fortalezas.</p>
+            <img id="photo" src="https://placehold.co/300x200" alt="Placeholder de imagen">
         </section>
 
         <!-- Etiqueta Section 2/5 -->
