--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d255168.19789702145!2d-79.9801008!3d-2.15250125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d13cbe855805f%3A0x8015a492f4fca473!2sGuayaquil!5e0!3m2!1ses-419!2sec!4v1716230594253!5m2!1ses-419!2sec" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="info-per">
-                <section id="habilidades">
+                <section id="habilidades_1">
                     <h2 class="subtitle">Habilidades</h2>
                     <ul>
                         <li>Programación en Java, Python y JavaScript</li>
@@ -71,7 +71,7 @@
             <section id="resumen">
                 <h2 class="subtitle">Resumen</h2>
                 <p>Estudiante de Computación con experiencia en desarrollo de software y automatización de procesos. Poseo habilidades en programación con Java y Python, desarrollo web y manejo de bases de datos. He trabajado en proyectos que incluyen la optimización de inventarios y la creación de herramientas de conversión de datos, así como en el ámbito de la topografía. Busco aplicar mis conocimientos en entornos que requieran soluciones innovadoras y eficientes. Capacidad de adaptación, trabajo en equipo y pensamiento crítico son mis principales fortalezas.</p>
-                <img id="photo" src="https://i.postimg.cc/CKNf7hz7/cats.png" style="margin-left: 10px; border-radius: 50%; border-style: solid; border-color: black; border-width: 0.3vh;" width="210vh" height="230vh" alt="Placeholder de imagen">
+                <img id="photo" src="https://i.postimg.cc/CKNf7hz7/cats.png" style="margin-left: 10px; border-radius: 50%; border-style: solid; border-color: black; border-width: 0.3vh;" width="210px" height="230px" alt="Placeholder de imagen">
             </section>
 
             <!-- Experiencia Profesional -->
@@ -119,7 +119,7 @@
 
             <!-- Habilidades -->
             <section id="habilidades">
-                <h2 style="align='left';">Tecnologías que conozco</h3>
+                <h2 style="align='left';">Tecnologías que conozco</h2>
                 <div class="icon-container">
                     <img src="https://skillicons.dev/icons?i=js" alt="JavaScript">
                     <img src="https://skillicons.dev/icons?i=html" alt="HTML">
